fix line-break in opds

--- a/src/renderer/assets/styles/components/blocks.css
+++ b/src/renderer/assets/styles/components/blocks.css
@@ -52,6 +52,7 @@
   font-size: 20px;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0);
   transition: all .3s;
+      line-break: anywhere;
 
   & p, 
   & a, 
